test_resources/lit_class/errors/test6.yr
class A {
    pub self () {}

    @unsafe
    pub fn foo (self, i : *i32) {
        let _ = *i;
    }

}

fn main () {
    let a = copy A ();
    let z = &a.foo;

    let f = 1;
    z (&f);
}
